@@ -13,6 +13,9 @@ tmtags
 ## VIM
 *.swp
 
+## RBX
+*.rbc
+
 ## PROJECT::GENERAL
 coverage
 rdoc
